--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hugeicons/react-pro": "^0.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "convex": "^1.12.1",
     "lucide-react": "^0.391.0",
     "next": "14.2.3",
     "react": "^18",
