--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "convex": "^1.12.1",
     "lucide-react": "^0.391.0",
     "next": "14.2.3",
+    "openai": "^4.51.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
