--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-react": "^8.1.5",
     "lucide-react": "^0.391.0",
     "next": "14.2.3",
+    "next-share": "^0.27.0",
     "openai": "^4.51.0",
     "react": "^18",
     "react-dom": "^18",
